--- a/latex/ms.tex
+++ b/latex/ms.tex
@@ -108,11 +108,17 @@ Suppose that we have a set of two populations labelled 1 and 2 where random mati
 
 Suppose there are $N_1$ parents in the population 1 at the beginning of the first year. Each parent produces offspring in which the number is governed by the parent's reproductive potential, denoted by $\lambda_{i,1}$ ($i=1,2,\ldots,N_1$). After the reproductive season, part of the parents would start to moving towards the population 2; $M$ survived migrants arrive in the population 2 so that there are $N_2$ parents in the population 2 at the beginning of the second year ($M < N_2$). Similar to the population 1, $N_2$ parents produce offspring in which the number is determined by $\lambda_{j,2}$ ($j=1,2,\ldots,N_2$). Theoretically speaking, the number of offspring for each parent is a random variable with mean $\lambda_{i,1}$ or $\lambda_{j,2}$. 
 
+%%%%%%%%%%%%%%
+\begin{center}
+Figure \ref{cartoon} is here. 
+\end{center}
+%%%%%%%%%%%%%%
+
 \subsection{Sampling}
 
 To estimate the migration number or rate, we utilize the number of HS and/or PO pairs observed in a sample. In the both populations, $n_{\rm O, 1}$ and $n_{\rm O, 2}$ offspring are randomly sampled. Additionally, $n_{\rm P, 1}$ and $n_{\rm P, 2}$ parents are randomly sampled immediately after the end of the reproductive season in the first and second year, respectively. For mathematical tractability, parents have to survive during the reproductive season; therefore, both mother and father of a certain offspring have a potential to be sampled. It should be noted that al the four kinds of a sample (i.e., $n_{\rm P, 1}$, $n_{\rm P, 2}$, $n_{\rm O, 1}$ and $n_{\rm O, 2}$) are not always required for estimating migration number or rate; what kinds of a sample are needed depends on the situation. In this section, we only focus HS pairs and PO pairs found between the two populations. For the applicability of fishery management, we assume invasive sampling procedure, preventing the finding of a parent-offspring pair such that a parent and offspring is sampled in the population 1 and 2, respectively. 
 
-The numbers of HS and PO pairs found between the two populations are determined by pairwise comparison of all the sample individuals ($n_{\rm O,1}n_{\rm O,2}$ and $n_{\rm O,1}n_{\rm P,2}$ comparisons, respectively). As depicted in {\bf Fig~\ref{cartoon}}, X offspring and Y parents are sampled in the population 1 and X offspring and Y parents are sampled in the population 1, and X HS and Y PO pairs found between the two populations are observed. In addition, X and Y PO pairs found within the same population are observed, which are available to estimate parent numbers, as explain the next section. In our modeling framework, if full-sibling (FS) relationship is found, we count it as two HS pairs. 
+The numbers of HS and PO pairs found between the two populations are determined by pairwise comparison of all the sample individuals ($n_{\rm O,1}\times n_{\rm O,2}$ and $n_{\rm O,1}\times n_{\rm P,2}$ comparisons, respectively). In the example depicted in {\bf Fig~\ref{cartoon}}, five offspring and four parents are sampled in the population 1 and four offspring and six parents are sampled in the population 2, and two HS and one PO pairs found between the two populations are observed. In addition, there are several PO pairs observed within the same population, which are available to estimate parent numbers, as explain the next section. In our modeling framework, if full-sibling (FS) relationship is found, we count it as two HS pairs. 
 
 \textcolor{red}{kokomade!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!}
 
@@ -133,11 +139,7 @@ In this study, a mature individual is called a parent even if it does not produc
 
 
 
-%%%%%%%%%%%%%%
-\begin{center}
-Figure \ref{cartoon} is here. 
-\end{center}
-%%%%%%%%%%%%%%
+
 
 
 
@@ -530,7 +532,7 @@ No datasets were generated or analyzed in this study.
 
 \clearpage
 
-\newcommand{\figcapa}{Example of relationships between mothers and their offspring number. The open, gray, and filled circles represent mothers, their eggs, and their offspring, respectively. The area of an open circle indicates the degree of reproductive potential of each mother (i.e., $\lambda_i$). The dotted and thin arrows denote mother--egg and egg--offspring relationships, respectively. The symbol x denotes a failure to survive at sampling. Sampled individuals are denoted with squares. Input parameters in this example: $n_{\rm P, 1}=4$, $n_{\rm P, 2}=4$, $n_{\rm O, 1}=4$, $n_{\rm O, 2}=4$, $N_{1}=16$, $N_{2}=14$, and $M=6$. The numbers of kinship pairs: $H_{\rm PO, 1}=1$, $H_{\rm PO, 2}=1$, $H_{\rm PO, bet}=1$, and $H_{\rm HS, bet}=2$.}
+\newcommand{\figcapa}{Example of relationships between mothers and their offspring number. The open, gray, and filled circles represent mothers, their eggs, and their offspring, respectively. The area of an open circle indicates the degree of reproductive potential of each mother (i.e., $\lambda_i$). The dotted and thin arrows denote mother--egg and egg--offspring relationships, respectively. The symbol x denotes a failure to survive at sampling. Sampled individuals are denoted with squares. Input parameters in this example: $n_{\rm P, 1}=4$, $n_{\rm O, 1}=5$, $n_{\rm P, 2}=6$, $n_{\rm O, 2}=4$, $N_{1}=16$, $N_{2}=14$, and $M=6$. The numbers of kinship pairs: $H_{\rm PO, bet}=1$, $H_{\rm HS, bet}=2$, $H_{\rm PO, 1}=3$, and $H_{\rm PO, 2}=2$.}
 
 \newcommand{\figcapb}{Violin plots showing the distribution of relative bias in our estimator (Eq.~\ref{NeN_hat2}) for various values of $c$ and sample size. Filled circles represent the mean values. Sample sizes for mothers and offspring are identical (i.e., $n=n_{\rm M} = n_{\rm O}$) and indicated in the legend. For the demonstration purposes, the distribution is truncated, although the mean values are calculated including the truncated values. (a) $N_{\rm m}=1{,}000$, (b) $N_{\rm m}=10{,}000$.}
 
