--- a/latex/ms.tex
+++ b/latex/ms.tex
@@ -94,11 +94,11 @@ Estimating the number of migrants among the populations is essential for underst
 応用例として，３年間にわたって２つのサブ集団からサンプルされた当歳魚から見出される半兄弟ペアをもとに，個体数・移動率・生存率を推定する枠組みを提示する。そこでは，同じサブ集団から年を跨いで見つかる半兄弟ペアに基づく関係式と，今回新たに開発した関係式を組み合わせて用いる。
 
 \section{Theory}\label{sec2}
-In this section, we present the theoretical foundation for estimating a migrant number and a migration rate using HS or PO pairs, which are found between two populations with a different sample timing. While the estimators can hold under flexible assumptions for reproduction (see {\bf Appendix}), here we assume a relatively simple situation for explanation purposes. It should be noted that the formulation of the estimators, presented in Equations 4-5 and 7-8, is a function with parent numbers for each population; in the next section, we provide the treatment for estimating the unknown parent numbers by additional usage of HS and/or PO pairs. The main symbols used in the current paper are summarized in {\bf Table \ref{symbols}}. 
+In this section, we present the theoretical foundation for estimating a migrant number and a migration rate of iteroparous species using HS or PO pairs, which are found between two populations with a different sample timing. While the estimators can hold under flexible assumptions for reproduction (see {\bf Appendix}), here we assume a relatively simple situation for explanation purposes. It should be noted that the formulation of the estimators, presented in Equations 4-5 and 7-8, is a function with parent numbers for each population; in the next section, we provide the treatment for estimating the unknown parent numbers by additional usage of HS and/or PO pairs. The main symbols used in the current paper are summarized in {\bf Table \ref{symbols}}. 
 
 %%%%%%%%%%%%%%
 \begin{center}
-Table \ref{symbols} is here. 
+\fbox{Table \ref{symbols} is here. }
 \end{center}
 %%%%%%%%%%%%%%
 
@@ -106,63 +106,21 @@ Table \ref{symbols} is here.
 
 Suppose that we have a set of two populations labelled 1 and 2 where random mating occurs within each population and that parents can move to the other population after the end of the reproductive season. Hereafter, without loss of generality, we consider the movement of parents in the direction from population 1 to population 2 and focus on the migration number or rate, and that is what we attempt to estimate. In this framework, considering two reproductive seasons (hereafter, we call them "the first year" and "the second year") is enough to estimate it. {\bf Figure \ref{cartoon}} presents a schematic representation of the kinship relationships and movements of parents. 
 
-Suppose there are $N_1$ parents in the population 1 at the beginning of the first year. Each parent produces offspring in which the number is governed by the parent's reproductive potential, denoted by $\lambda_{i,1}$ ($i=1,2,\ldots,N_1$). After the reproductive season, part of the parents would start to moving towards the population 2; $M$ survived migrants arrive in the population 2 so that there are $N_2$ parents in the population 2 at the beginning of the second year ($M < N_2$). Similar to the population 1, $N_2$ parents produce offspring in which the number is determined by $\lambda_{j,2}$ ($j=1,2,\ldots,N_2$). Theoretically speaking, the number of offspring for each parent is a random variable with mean $\lambda_{i,1}$ or $\lambda_{j,2}$. 
+Suppose there are $N_1$ parents in the population 1 at the beginning of the first year. Each parent produces offspring in which the number is governed by the parent's reproductive potential, denoted by $\lambda_{i,1}$ ($i=1,2,\ldots,N_1$). After the reproductive season, part of the parents would start to moving towards the population 2; $M$ survived migrants arrive in the population 2 so that there are $N_2$ parents in the population 2 at the beginning of the second year ($M < N_2$). Similar to the population 1, $N_2$ parents produce offspring in which the number is determined by $\lambda_{j,2}$ ($j=1,2,\ldots,N_2$). The reproductive potential is determined by several factors and its details are summarized in {\bf Appendix}; theoretically speaking, the number of offspring for each parent is set as a random variable with mean $\lambda_{i,1}$ or $\lambda_{j,2}$. 
 
 %%%%%%%%%%%%%%
 \begin{center}
-Figure \ref{cartoon} is here. 
+\fbox{Figure \ref{cartoon} is here. }
 \end{center}
 %%%%%%%%%%%%%%
 
 \subsection{Sampling}
 
-To estimate the migration number or rate, we utilize the number of HS and/or PO pairs observed in a sample. In the both populations, $n_{\rm O, 1}$ and $n_{\rm O, 2}$ offspring are randomly sampled. Additionally, $n_{\rm P, 1}$ and $n_{\rm P, 2}$ parents are randomly sampled immediately after the end of the reproductive season in the first and second year, respectively. For mathematical tractability, parents have to survive during the reproductive season; therefore, both mother and father of a certain offspring have a potential to be sampled. It should be noted that al the four kinds of a sample (i.e., $n_{\rm P, 1}$, $n_{\rm P, 2}$, $n_{\rm O, 1}$ and $n_{\rm O, 2}$) are not always required for estimating migration number or rate; what kinds of a sample are needed depends on the situation. In this section, we only focus HS pairs and PO pairs found between the two populations. For the applicability of fishery management, we assume invasive sampling procedure, preventing the finding of a parent-offspring pair such that a parent and offspring is sampled in the population 1 and 2, respectively. 
+To estimate the migration number or rate, we utilize the number of HS and/or PO pairs observed in a sample. In the both populations, $n_{\rm O, 1}$ and $n_{\rm O, 2}$ offspring are randomly sampled, which are identified as young-of-year individuals without errors. Additionally, $n_{\rm P, 1}$ and $n_{\rm P, 2}$ parents are randomly sampled immediately after the end of the reproductive season in the first and second year, respectively. For mathematical tractability, parents have to survive during the reproductive season; therefore, both mother and father of a certain offspring have a potential to be sampled even in the same year. It should be noted that al the four kinds of a sample (i.e., $n_{\rm P, 1}$, $n_{\rm P, 2}$, $n_{\rm O, 1}$ and $n_{\rm O, 2}$) are not always required for estimating migration number or rate; what kinds of a sample are needed depends on the situation. In this section, we only focus HS pairs and PO pairs found between the two populations. For the applicability of fishery management, we assume invatsive sampling procedure, preventing the finding of a parent-offspring pair such that a parent and offspring is sampled in the population 1 and 2, respectively. 
 
-The numbers of HS and PO pairs found between the two populations are determined by pairwise comparison of all the sample individuals ($n_{\rm O,1}\times n_{\rm O,2}$ and $n_{\rm O,1}\times n_{\rm P,2}$ comparisons, respectively). In the example depicted in {\bf Fig~\ref{cartoon}}, five offspring and four parents are sampled in the population 1 and four offspring and six parents are sampled in the population 2, and two HS and one PO pairs found between the two populations are observed. In addition, there are several PO pairs observed within the same population, which are available to estimate parent numbers, as explain the next section. In our modeling framework, if full-sibling (FS) relationship is found, we count it as two HS pairs. 
+In the example depicted in {\bf Fig~\ref{cartoon}}, five offspring and four parents are sampled in the population 1 and four offspring and six parents are sampled in the population 2, and two HS and one PO pairs found between the two populations are observed. In addition, there are several PO pairs observed within the same population, which are available to estimate parent numbers, as explain the next section. In our modeling framework, if full-sibling (FS) relationship is found, we count it as two HS pairs. The numbers of HS and PO pairs found between the two populations are determined by pairwise comparison of all the sample individuals ($n_{\rm O,1}\times n_{\rm O,2}$ and $n_{\rm O,1}\times n_{\rm P,2}$ comparisons, respectively). 
 
 \textcolor{red}{kokomade!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!}
-
-
-
-
-
-
-
-Although the theoretical framework allows a flexible setting of the reproductive potential, 
-
-
-
-
-
-どのように子供を産むのか。我々のモデルは、フレキシブルな仮定に対応できるが詳細は付録に
-In this study, a mature individual is called a parent even if it does not produce offspring. 
-
-
-
-
-
-
-
-
-and there are migrant individuals between the two populations. also no population subdivision or spatial struc- ture. In this study, a mature female is called a mother even if she does not produce offspring. For mathematical tractability, we assume that only one spawning ground exists in which the mothers remain for the entire spawning season. Following (Akita, 2020), our modeling frame- work employs two types of overdispersed reproduction: parental and nonparental variations. Thus, the former indicates a variation caused by the mother's covariates, such as age, weight, and residence time on the spawning ground, while the latter indicates a variation caused by nonrandom stochastic events during a series of reproductive episodes, which are independent of the mother's covariates, such as family-correlated survivorship or the mating behavior effects (e.g., competition for males/females and correlation between mating op- portunities of the mother and the number of her offspring). Figure 1 illustrates a schematic diagram of the effects of parental and non- parental variations exemplified by age-dependent reproduction and family-correlated survival on kinship relationships in a population. Detailed definitions of parental and nonparental variations are stated in (Akita, 2020). Appendix 1 provides the theoretical foundation of both parental and nonparental variations in reproduction.
-
-\begin{itemize}
-  \item 移動が双方向
-  \item 性比1:1およびランダム交配を仮定して両性を考慮
-  \item 繁殖ポテンシャルが一定でない
-  \item 移動しやすさが繁殖ポテンシャルに依存
-\end{itemize}
-といった要素を追加していく。また，どのモデルでも共通して仮定しているのは以下の５点である。
-\begin{enumerate}
-  \item 年をまたぐ多回繁殖
-  \item 親魚によるサブ集団間の移動は，繁殖シーズンの間に起きる
-  \item サンプルされる当歳魚（０歳）は，必ずサンプルされたサブ集団で産まれる
-  \item 当歳魚かどうかの判断は１００％可能
-  \item サンプル間の近親判別では，１００％の成功率で半兄弟ペアか否かがなされる
-\end{enumerate}
-また，性成熟した個体を親と呼ぶことにする。
-
-
 
 \subsection{HSP-based model}
 
