--- a/latex/ms.tex
+++ b/latex/ms.tex
@@ -193,15 +193,17 @@ and
 
 \subsection{Required sample size}
 
+Proposed estimators are based on the observed number of kinship pairs. Their expected number is linearly determined by the number of pairwise comparison (Eqs.~\ref{HS-2-1}-\ref{HS-2-2} and \ref{PO-2-1}-\ref{PO-2-2}), providing guidance for a sample size to ensure the condition that at least one or more kinship pairs can be found. The conditions are given by
 \begin{align}
-n_{\rm O, 1} n_{\rm O, 2} &> \frac{ N_{2} } { 4m }
+n_{\rm O, 1} n_{\rm O, 2} &> \frac{ N_{2} } { 4m },
 \label{RS-1}
 \end{align}
-
+and
 \begin{align}
-n_{\rm O, 1} n_{\rm P, 2} &> \frac{ N_{2} } { 2m }
+n_{\rm O, 1} n_{\rm P, 2} &> \frac{ N_{2} } { 2m }.
 \label{RS-2}
 \end{align}
+Roughly speaking, required sample size to ensure above conditions is that $n>\sqrt{N_2}$, where $n = n_{\rm O, 1}=n_{\rm O, 2}=n_{\rm P, 2}$. It should be noted that very tiny $m$, which dramatically increases the required sample size, produces genetic differences between two populations. In such a case, there are several methods to estimate migration rate by population genetics technique; alternatively, we focus the situation of moderate/large migration rate, which leads little genetic differences between two populations. 
 
 \textcolor{red}{kokomade!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!}
 
