--- a/latex/ms.tex
+++ b/latex/ms.tex
@@ -225,6 +225,10 @@ For those estimators, $\widetilde{H}_{\rm HS,bet}$ and $\widetilde{H}_{\rm PO,be
 
 \subsection{Parent number can be estimated by PO pairs found within a population}
 
+これまでは、N1とN2は既知として推定量を導出してきた。もしこれらが未知であるのあらば、N1やN2は何かしらの方法で推定する必要がある。このセクションでは、CKMRの知見に基づきこれらについても近親関係から推定することで、移動率に関する推定を、近親関係からのみで完結させる。
+
+前のセクションでは、２年目に集団２から親と子を両方サンプルしていて、移動を推定していた。これらのサンプルを用いて、N2を推定することが可能である。
+
 \begin{align}
 \widehat{N_2} &= \frac{ 2 n_{\rm O, 2} n_{\rm P, 2} + 1 }{\widetilde{H}_{\rm PO, 2} + 1} 
 \label{AP-3}
