--- a/latex/ms.tex
+++ b/latex/ms.tex
@@ -94,7 +94,7 @@ Estimating the number of migrants among the populations is essential for underst
 応用例として，３年間にわたって２つのサブ集団からサンプルされた当歳魚から見出される半兄弟ペアをもとに，個体数・移動率・生存率を推定する枠組みを提示する。そこでは，同じサブ集団から年を跨いで見つかる半兄弟ペアに基づく関係式と，今回新たに開発した関係式を組み合わせて用いる。
 
 \section{Theory}\label{sec2}
-In this section, we present the theoretical foundation for estimating a migrant number and a migration rate of iteroparous species using HS or PO pairs, which are found between two populations with a different sample timing. While the estimators can hold under flexible assumptions for reproduction (see {\bf Appendix}), here we assume a relatively simple situation for explanation purposes. It should be noted that the formulation of the estimators, presented in Equations 4-5 and 7-8, is a function with parent numbers for each population; in the next section, we provide the treatment for estimating the unknown parent numbers by additional usage of HS and/or PO pairs. The main symbols used in the current paper are summarized in {\bf Table \ref{symbols}}. 
+In this section, we present the theoretical foundation for estimating a migrant number and a migration rate of iteroparous species using HS or PO pairs, which are found between two populations with a different sample timing. While the estimators can hold under flexible assumptions for reproduction (see {\bf Appendix}), here we assume a relatively simple situation for explanation purposes. The main symbols used in the current paper are summarized in {\bf Table \ref{symbols}}. 
 
 %%%%%%%%%%%%%%
 \begin{center}
@@ -162,12 +162,10 @@ Subscription of these estimators indicates the numbering of proposed estimators 
 
 \subsection{PO pair-based model}
 
-Next, we consider the probability that offspring sampled in the population 1 and a parent sampled in the population 2 share an PO relationship, denoted by $\pi_{\rm PO, bet}$. $\pi_{\rm PO, bet}$ can be partitioned into the three probabilities: (i) the probability that sampled offspring in the population 1 born to a migrant; (ii) the probability that a migrant is sampled; and (iii) the probability that the migrant of a sampled offspring in the population 1 and the migrant sampled in the population 2 are identical. 
-
-The first and second probabilities are the same as the one introduced in the previous subsection, that is, $2M/N_{1}$ and $1/M$. The second probability is $M/N_{2}$ by definition. Taken together, we obtain
+Next, we consider the probability that offspring sampled in the population 1 and a parent sampled in the population 2 share an PO relationship, denoted by $\pi_{\rm PO, bet}$. $\pi_{\rm PO, bet}$ can be partitioned into the three probabilities: (i) the probability that sampled offspring in the population 1 born to a migrant; (ii) the probability that a migrant is sampled; and (iii) the probability that the migrant of a sampled offspring in the population 1 and the migrant sampled in the population 2 are identical. The first and second probabilities are the same as the one introduced in the previous subsection, that is, $2M/N_{1}$ and $1/M$. The second probability is $M/N_{2}$ by definition. Taken together, we obtain
 \begin{align}
 \pi_{\rm PO,bet} &= \frac{2M}{N_{1}} \frac{M}{N_{2}} \frac{1}{M} \nonumber\\
-&= \frac{2M}{N_{1}N_{2}}
+&= \frac{2M}{N_{1}N_{2}}.
 \label{PO-1}
 \end{align}
 
@@ -175,10 +173,9 @@ Let $H_{\rm PO,bet}$ be the number of PO pairs found in offspring samples of siz
 \begin{align}
 \mathbb{E}[H_{\rm PO, bet}] &= \pi_{\rm PO,bet} n_{\rm O, 1} n_{\rm P, 2} \nonumber\\
 &= \frac{ 2 n_{\rm O, 1} n_{\rm P, 2} M } { N_{1} N_{2} } \label{PO-2-1} \\
-&= \frac{ 2 n_{\rm O, 1} n_{\rm P, 2} m } { N_{2} }
+&= \frac{ 2 n_{\rm O, 1} n_{\rm P, 2} m } { N_{2} }.
 \label{PO-2-2}
 \end{align}
-
 The observed number of PO pairs in a sample is defined by $\widetilde{H}_{\rm PO, bet}$, and $\mathbb{E}[H_{\rm PO, bet}]$ in Equation \ref{HS-2-1} is replaced by $\widetilde{H}_{\rm HS, bet}$, generating the linear estimator of $M$ and $m$:
 \begin{align}
 \widehat{M_2} &= \frac{N_{1} N_{2} \widetilde{H}_{\rm PO,bet} } {2 n_{\rm O, 1} n_{\rm P, 2} },
@@ -189,7 +186,6 @@ and
 \widehat{m_2} &= \frac{N_{2} \widetilde{H}_{\rm PO,bet} } {2 n_{\rm O, 1} n_{\rm P, 2} }.
 \label{PO-4}
 \end{align}
-
 
 \subsection{Required sample size}
 
@@ -207,7 +203,7 @@ Roughly speaking, required sample size to ensure above conditions is that $n>\sq
 
 \subsection{Efficient use of kinship pairs found between populations}
 
-So far, we only focus the usage of HS pairs or PO pairs found between populations. When the both kinship pairs are available, we can obtain efficient estimators by combined $\widehat{M_1}$ and $\widehat{M_2}$ for migration number: 
+When the both HS pairs and PO pairs, which are found between populations, are simultaneously available, we can obtain efficient estimators by combined $\widehat{M_1}$ and $\widehat{M_2}$ for migration number: 
 \begin{align}
 \widehat{M_3} &= \frac{ N_{1} N_{2} \left(\widetilde{H}_{\rm HS,bet} + \widetilde{H}_{\rm PO,bet}\right) } {2n_{\rm O, 1} \left(2 n_{\rm O, 2} + n_{\rm P, 2}\right), }
 \label{AP-1}
@@ -219,11 +215,13 @@ and by combining $\widehat{m_1}$ and $\widehat{m_2}$ for migration rate:
 \end{align}
 For those estimators, $\widetilde{H}_{\rm HS,bet}$ and $\widetilde{H}_{\rm PO,bet}$ is weighted by a sample size $n_{\rm O, 2}$ and $n_{\rm P, 2}$, respectively. 
 
-\textcolor{red}{kokomade!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!}
-\section{Applications}\label{sec3}
-
-
 \subsection{Parent number can be estimated by PO pairs found within a population}
+
+So far, we provide the formulation of the estimators, presented in Equations 4-5 and 7-8, is a function with parent numbers for each population. 
+
+; in this subsection, we provide the treatment for estimating the unknown parent numbers by additional usage of HS and/or PO pairs. 
+
+\textcolor{red}{kokomade!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!}
 
 これまでは、N1とN2は既知として推定量を導出してきた。もしこれらが未知であるのあらば、N1やN2は何かしらの方法で推定する必要がある。このセクションでは、CKMRの知見に基づきこれらについても近親関係から推定することで、移動率に関する推定を、近親関係からのみで完結させる。
 
@@ -262,6 +260,7 @@ migration rateを推定すると考えると、
 
 
 
+\section{Results and Discussion}\label{sec3}
 
 
 
